# basm-rust-sdk

./: Cargo.toml  LICENSE_MIT  README.md  todo.txt
basm-rust-sdk/: Cargo.toml
basm-rust-sdk-macros/: Cargo.toml
basm-rust-sdk-macros/src/: lib.rs
basm-rust-sdk/src/: attestation.rs  http.rs  io.rs  lib.rs  memory.rs  utils.rs
basm-sdk-community/: Cargo.toml  README.md
basm-sdk-community-macros/: Cargo.toml
basm-sdk-community-macros/src/: lib.rs
basm-sdk-community/src/: http.rs  io.rs  lib.rs  memory.rs  prelude.rs
integration-test/: Cargo.toml  README.md  config.toml  fn-call.json
integration-test/.cargo/: config.toml
integration-test/scripts/: run.sh
integration-test/src/: lib.rs
