[package]
name = "basm-rust-sdk"
version = "0.1.0"
authors = ["mattjurenka <matt.jurenka@comcast.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["console_error_panic_hook"]

[dependencies]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.7", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
basm-rust-sdk-macros = { path = "../basm-rust-sdk-macros" }

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
