[package]
name = "basm-rust-sdk-integration-test"
version = "0.1.0"
authors = ["mattjurenka <matt.jurenka@comcast.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
basm-rust-sdk = { path = "../basm-rust-sdk" }

[profile.release]
opt-level = "s"

[target.wasm32-wasip1]
rustflags = [
    "-C", "link-arg=--export=malloc",
    "-C", "link-arg=--export=free",
    "-C", "link-arg=-zstack-size=65536"
]
