[package]
name = "basm-sdk-community-integration-test"
version = "0.1.0"
authors = ["mattjurenka <matt.jurenka@comcast.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
basm-sdk-community = { path = "../basm-sdk-community" }
rand = "0.9.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
panic = "abort"
